WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265247
PathSegments cannot be used with anything else than PathImpl
https://bugs.webkit.org/show_bug.cgi?id=265247
Summary
PathSegments cannot be used with anything else than PathImpl
Kimmo Kinnunen
Reported
2023-11-22 05:41:53 PST
PathSegments cannot be used with anything else than PathImpl Should be able to use them with CGContext
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-22 05:42:01 PST
<
rdar://problem/118717060
>
Kimmo Kinnunen
Comment 2
2023-11-22 05:48:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20819
EWS
Comment 3
2023-11-28 04:52:30 PST
Committed
271199@main
(d132cc11f0bf): <
https://commits.webkit.org/271199@main
> Reviewed commits have been landed. Closing PR #20819 and removing active labels.
EWS
Comment 4
2023-12-14 11:19:11 PST
Committed
267815.632@safari-7617-branch
(b4db56f94d3a): <
https://commits.webkit.org/267815.632@safari-7617-branch
> Reviewed commits have been landed. Closing PR #973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug