Source/WebCore/platform/graphics/Path.cpp
@@ -118,7 +118,7 @@ void Path::moveTo(const FloatPoint& point)
     if (isEmpty())
         m_data = PathSegment(PathMoveTo { point });
     else
-        ensureImpl().moveTo(point);
+        ensureImpl().add(PathMoveTo { point });
 }
 
 const PathMoveTo* Path::asSingleMoveTo() const
@@ -135,7 +135,7 @@ void Path::addLineTo(const FloatPoint& point)
     else if (auto moveTo = asSingleMoveTo())
         m_data = PathSegment(PathDataLine { moveTo->point, point });
     else
-        ensureImpl().addLineTo(point);
+        ensureImpl().add(PathLineTo { point });
 }
 
 void Path::addQuadCurveTo(const FloatPoint& controlPoint, const FloatPoint& endPoint)
@@ -145,7 +145,7 @@ void Path::addQuadCurveTo(const FloatPoint& controlPoint, const FloatPoint& endP
     else if (auto moveTo = asSingleMoveTo())
         m_data = PathSegment(PathDataQuadCurve { moveTo->point, controlPoint, endPoint });
     else
-        ensureImpl().addQuadCurveTo(controlPoint, endPoint);
+        ensureImpl().add(PathQuadCurveTo { controlPoint, endPoint });
 }
 
 void Path::addBezierCurveTo(const FloatPoint& controlPoint1, const FloatPoint& controlPoint2, const FloatPoint& endPoint)
@@ -155,7 +155,7 @@ void Path::addBezierCurveTo(const FloatPoint& controlPoint1, const FloatPoint& c
     else if (auto moveTo = asSingleMoveTo())
         m_data = PathSegment(PathDataBezierCurve { moveTo->point, controlPoint1, controlPoint2, endPoint });
     else
-        ensureImpl().addBezierCurveTo(controlPoint1, controlPoint2, endPoint);
+        ensureImpl().add(PathBezierCurveTo { controlPoint1, controlPoint2, endPoint });
 }
 
 void Path::addArcTo(const FloatPoint& point1, const FloatPoint& point2, float radius)
@@ -165,7 +165,7 @@ void Path::addArcTo(const FloatPoint& point1, const FloatPoint& point2, float ra
     else if (auto moveTo = asSingleMoveTo())
         m_data = PathSegment(PathDataArc { moveTo->point, point1, point2, radius });
     else
-        ensureImpl().addArcTo(point1, point2, radius);
+        ensureImpl().add(PathArcTo { point1, point2, radius });
 }
 
 void Path::addArc(const FloatPoint& point, float radius, float startAngle, float endAngle, RotationDirection direction)
@@ -179,7 +179,7 @@ void Path::addArc(const FloatPoint& point, float radius, float startAngle, float
     if (isEmpty())
         m_data = PathSegment(PathArc { point, radius, startAngle, endAngle, direction });
     else
-        ensureImpl().addArc(point, radius, startAngle, endAngle, direction);
+        ensureImpl().add(PathArc { point, radius, startAngle, endAngle, direction });
 }
 
 void Path::addEllipse(const FloatPoint& point, float radiusX, float radiusY, float rotation, float startAngle, float endAngle, RotationDirection direction)
@@ -187,7 +187,7 @@ void Path::addEllipse(const FloatPoint& point, float radiusX, float radiusY, flo
     if (isEmpty())
         m_data = PathSegment(PathEllipse { point, radiusX, radiusY, rotation, startAngle, endAngle, direction });
     else
-        ensureImpl().addEllipse(point, radiusX, radiusY, rotation, startAngle, endAngle, direction);
+        ensureImpl().add(PathEllipse { point, radiusX, radiusY, rotation, startAngle, endAngle, direction });
 }
 
 void Path::addEllipseInRect(const FloatRect& rect)
@@ -195,7 +195,7 @@ void Path::addEllipseInRect(const FloatRect& rect)
     if (isEmpty())
         m_data = PathSegment(PathEllipseInRect { rect });
     else
-        ensureImpl().addEllipseInRect(rect);
+        ensureImpl().add(PathEllipseInRect { rect });
 }
 
 void Path::addRect(const FloatRect& rect)
@@ -203,7 +203,7 @@ void Path::addRect(const FloatRect& rect)
     if (isEmpty())
         m_data = PathSegment(PathRect { rect });
     else
-        ensureImpl().addRect(rect);
+        ensureImpl().add(PathRect { rect });
 }
 
 static FloatRoundedRect calculateEvenRoundedRect(const FloatRect& rect, const FloatSize& roundingRadii)
@@ -245,7 +245,7 @@ void Path::addRoundedRect(const FloatRoundedRect& roundedRect, PathRoundedRect::
     if (isEmpty())
         m_data = PathSegment(PathRoundedRect { roundedRect, strategy });
     else
-        ensureImpl().addRoundedRect(roundedRect, strategy);
+        ensureImpl().add(PathRoundedRect { roundedRect, strategy });
 }
 
 void Path::addRoundedRect(const FloatRect& rect, const FloatSize& roundingRadii, PathRoundedRect::Strategy strategy)
@@ -256,7 +256,7 @@ void Path::addRoundedRect(const FloatRect& rect, const FloatSize& roundingRadii,
     if (isEmpty())
         m_data = PathSegment(PathRoundedRect { calculateEvenRoundedRect(rect, roundingRadii), strategy });
     else
-        ensureImpl().addRoundedRect(calculateEvenRoundedRect(rect, roundingRadii), strategy);
+        ensureImpl().add(PathRoundedRect { calculateEvenRoundedRect(rect, roundingRadii), strategy });
 }
 
 void Path::addRoundedRect(const RoundedRect& rect)
@@ -269,7 +269,7 @@ void Path::closeSubpath()
     if (isEmpty() || isClosed())
         return;
 
-    ensureImpl().closeSubpath();
+    ensureImpl().add(PathCloseSubpath { });
 }
 
 void Path::addPath(const Path& path, const AffineTransform& transform)
